# nuitka-under-bazel

./: BUILD.bazel  README.md  WORKSPACE  requirements.txt  requirements_lock.txt
build_tools/: BUILD.bazel  generate_python_requirements.py
build_tools/nuitka/: BUILD.bazel  all_python_srcs.bzl  nuitka_binary.bzl  nuitka_wrapper.py
src/test1/: BUILD.bazel  config.yml  main.py
