load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "nuitka",
    srcs = ["nuitka_wrapper.py"],
    main = "nuitka_wrapper.py",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        requirement("nuitka"),
    ],
)
