load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "nuitka",
    srcs = ["nuitka_wrapper.py"],
    main = "nuitka_wrapper.py",
    visibility = [
        "//visibility:public",
    ],
    # NOTE One caveat is that required packages for targets
    # built with Nuitka need to be provided here. Nuitka needs
    # to have access to the cached site-packages directory in
    # order to function correctly.
    deps = [
        requirement("nuitka"),
        requirement("pyyaml"),
    ],
)
